--- a/src/app.css
+++ b/src/app.css
@@ -1,27 +1,30 @@
+@import 'tailwindcss/utilities';
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
-  --primary: 205 78% 58%;
-	font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-	color: black;
+	--primary: 205 78% 58%;
+	font-family: 'Poppins', sans-serif;
+	font-weight: 400;
+	font-style: normal;
+	color: white;
 }
 
 body {
-  display: flex;
-  flex-direction: column;
+	display: flex;
+	flex-direction: column;
 	min-height: 100vh;
 	margin: 0;
-  background-color: white;
-  background-image: url('https://images.unsplash.com/photo-1725645605964-c0e395fec453?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+	background-color: black;
+	background-image: url('/background.png');
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	position: relative;
 }
 
-main {
+a {
+	color: inherit;
+	text-decoration: none;
 }
